; ModuleID = '/home/carl/AnghaBench/php-src/main/extr_rfc1867.c_safe_php_register_variable.c'
source_filename = "/home/carl/AnghaBench/php-src/main/extr_rfc1867.c_safe_php_register_variable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i64, i32*, i64)* @safe_php_register_variable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @safe_php_register_variable(i8* %0, i8* %1, i64 %2, i32* %3, i64 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store i32* %3, i32** %9, align 8
  store i64 %4, i64* %10, align 8
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %17, label %13

13:                                               ; preds = %5
  %14 = load i8*, i8** %6, align 8
  %15 = call i32 @is_protected_variable(i8* %14)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %23, label %17

17:                                               ; preds = %13, %5
  %18 = load i8*, i8** %6, align 8
  %19 = load i8*, i8** %7, align 8
  %20 = load i64, i64* %8, align 8
  %21 = load i32*, i32** %9, align 8
  %22 = call i32 @php_register_variable_safe(i8* %18, i8* %19, i64 %20, i32* %21)
  br label %23

23:                                               ; preds = %17, %13
  ret void
}

declare dso_local i32 @is_protected_variable(i8*) #1

declare dso_local i32 @php_register_variable_safe(i8*, i8*, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
